# thermal-cam-ble

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  Readme.md  ble_store_config.h.patch  gitmodules  index.html  mlx_lib.patch  patch_the_framework.py  platformio.ini  sdkconfig  sdkconfig.defaults  sdkconfig.esp32-c6  sdkconfig.esp32-c6.old  sdkconfig.old
main/: Adafruit_MLX90640.c  Adafruit_MLX90640.h  CMakeLists.txt  MLX90640_I2C_Driver.c  adc_stuff.c  adc_stuff.h  ble_host.c  bleprph.h  config.h  gatt_svr.c  led_indicator.h  main.c  my_utils.h  prefs.c  prefs.h
src/: adc_stuff.c  adc_stuff.h  ble_host.c  bleprph.h  config.h  gap_srv.c  gatt_svr.c  led_indicator.c  led_indicator.h  main.cpp  my_utils.hpp  prefs.cpp  prefs.h
